--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,11 @@
        height: 100%;
      }
      body {
-       background-color: blanchedalmond;
+      background: url("https://media.gettyimages.com/id/1370464731/video/abstract-connection-dots-4k.jpg?s=640x640&k=20&c=LbyU3Ty5YuZ0rCYp2fNOi71ErNOH3NCM4Z_uvlaulek=");
+      background-size: cover;
+      background-repeat: no-repeat;
+       /* background-color: blanchedalmond; */
+
        display: flex;
        flex-direction: column;
      }
@@ -39,7 +43,7 @@
      h1 {
        text-align: center;
        margin-top: 20px;
-       color: #343a40;
+       color: #f7f7f7;
      }
      .card {
        transition: transform 0.2s, box-shadow 0.2s;
@@ -54,6 +58,8 @@
      }
      @media (max-width: 576px) {
        h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
          font-size: 24px;
          margin-top: 15px;
        }
