--- a/views/view_blog.ejs
+++ b/views/view_blog.ejs
@@ -48,7 +48,7 @@
 
      <!-- Blog Image -->
      <div class="text-center">
-       <img src="/<%= Read_blog.ImageUrl %>" alt="IMG" class="img-fluid">
+       <img src="<%= Read_blog.ImageUrl %>" alt="IMG" class="img-fluid">
      </div>
      <br>
      
