--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,6 +72,10 @@
          margin-bottom: 15px;
        }
      }
+     .B-U-B{
+      padding: 5px;
+      background-color: orange;
+     }
    </style>
 </head>
 <body>
@@ -105,7 +109,7 @@
          </div>
        </div>
      <% } else if (locals.all_blog) { %>
-       <h1>ALL USERS BLOGS</h1>
+       <h1 class="B-U-B"><b>BLOGIFY USERS BLOGS</b></h1>
        <br>
        <div class="container">
          <div class="row">
